--- a/public/mail_templates/welcomemail.hbs
+++ b/public/mail_templates/welcomemail.hbs
@@ -77,14 +77,14 @@
             <img src="https://space-club.onrender.com/img/nav_icon.jpg" alt="ASTEC Space Club Logo">
         </div>
         <h1>Welcome to ASTEC Space Club!</h1>
-        <p>Hello [Name],</p>
+        <p>Hello {{Name}},</p>
         <p>Thank you for joining ASTEC Space Club! We're thrilled to have you on board.</p>
         <p>This is an exciting journey into the world of space exploration, and we're here to explore together!</p>
         <p>Feel free to download our club guide to get started:</p>
         <a href="https://space-club.onrender.com/pdf/astec.pdf" class="guide-link">Download Club Guide PDF</a>
         <p>If you have any questions or need assistance, don't hesitate to contact us.</p>
         <p>Best regards,<br>Your ASTEC Space Club Team</p>
-        <a href="http://astec.free.nf" class="button">Explore More</a>
+        <center><a href="http://astec.free.nf" class="button">Explore More</a></center>
     </div>
 </body>
 </html>
