--- a/public/mail_templates/welcomemail.hbs
+++ b/public/mail_templates/welcomemail.hbs
@@ -84,7 +84,7 @@
         <a href="https://space-club.onrender.com/pdf/astec.pdf" class="guide-link">Download Club Guide PDF</a>
         <p>If you have any questions or need assistance, don't hesitate to contact us.</p>
         <p>Best regards,<br>Your ASTEC Space Club Team</p>
-        <center><a href="http://astec.free.nf" class="button">Explore More</a></center>
+        <center><a href="https://astec-f441c.web.app" class="button">Explore More</a></center>
     </div>
 </body>
 </html>
